# libchess

./: CMakeLists.txt  Dockerfile  README.md  bitscanner.c  bitscanner.cpp  board.c  board.cpp  boards_legal_moves.c  boards_legal_moves2.c  boards_legal_moves3.c  boards_legal_moves4.c  boards_legal_moves6.c  boards_legal_moves7.c  boards_legal_moves8.c  boards_legal_moves9.c  chess.c  chess_cnn.cpp  chess_cnn.h  chess_cnn2.cpp  chess_cnn2.h  chess_cnn3.cpp  chess_cnn4.cpp  chess_cnn4.h  chess_cnn5.cpp  chess_cnn5.h  chess_cnn6.cpp  chess_cnn6.h  chess_cnn7.cpp  chess_cnn7.h  chess_cnn_mcts.cpp  chess_mcts.cpp  chess_mcts_smp.cpp  creatica.cpp  dbsearch.c  engine.c  engine.cpp  eval.py  fen.c  fen.cpp  game.c  (+52 more)
nnue/: bitboard.h  evaluate.cpp  evaluate.h  nnue.cpp  position.cpp  position.h
nnue/nnue/: network.cpp  network.h  nnue_misc.cpp
