cmake_minimum_required (VERSION 3.8)
project(libchess)
add_library (chess SHARED "bitscanner.c" "board.c" "engine.c" "fen.c" "game.c" "game_omp.c" "move.c" "piece.c" "square.c" "tag.c" "zobrist-hash.c" "sqlite.c" "my_md5.c" "magic_bitboards.c" "boards_legal_moves8.c" "nnue/nnue/network.cpp" "nnue/nnue/nnue_accumulator.cpp" "nnue/nnue/features/half_ka_v2_hm.cpp" "nnue/bitboard.cpp" "nnue/evaluate.cpp" "nnue/memory.cpp" "nnue/misc.cpp" "nnue/nnue.cpp" "nnue/position.cpp" "nnue/nnue/nnue_misc.cpp")
target_link_libraries(chess pthread sqlite3 omp)
#add_compile_options(-fPIC)
